use url search params api

--- a/hoobs-nest-sidecar/package.json
+++ b/hoobs-nest-sidecar/package.json
@@ -15,7 +15,6 @@
         "name": "Michael Kellsy"
     },
     "dependencies": {
-        "axios": "^0.21.1",
-        "querystring": "^0.2.1"
+        "axios": "^0.21.1"
     }
 }
